@startuml career_ai_la_ERD

!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) #x
!define NN " NOT NULL"
!define NL " NULL"

hide methods
hide stereotypes

skinparam class {
    BackgroundColor #FEFEFE
    BorderColor #555555
    ArrowColor #333333
    FontName Arial
    FontSize 12
    HeaderBackgroundColor #4A90D9
    HeaderFontColor #FFFFFF
}

' ─────────────────────────────────────────
'  USERS
' ─────────────────────────────────────────
entity users {
    * id : BIGINT UNSIGNED PK AI
    --
    * name : VARCHAR(255) NOT NULL
    * email : VARCHAR(255) NOT NULL UNIQUE
    email_verified_at : TIMESTAMP NULL
    * password : VARCHAR(255) NOT NULL
    * role : ENUM('job','company','admin') NOT NULL DEFAULT 'job'
    phone : VARCHAR(255) NULL
    business_type : VARCHAR(255) NULL
    governorate : VARCHAR(255) NULL
    fcm_token : VARCHAR(255) NULL
    avatar_path : VARCHAR(255) NULL
    remember_token : VARCHAR(100) NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  PASSWORD_RESET_TOKENS
' ─────────────────────────────────────────
entity password_reset_tokens {
    * email : VARCHAR(255) PK
    --
    * token : VARCHAR(255) NOT NULL
    created_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  PERSONAL_ACCESS_TOKENS  (Sanctum)
' ─────────────────────────────────────────
entity personal_access_tokens {
    * id : BIGINT UNSIGNED PK AI
    --
    * tokenable_type : VARCHAR(255) NOT NULL
    * tokenable_id : BIGINT UNSIGNED NOT NULL
    * name : VARCHAR(255) NOT NULL
    * token : VARCHAR(64) NOT NULL UNIQUE
    abilities : TEXT NULL
    last_used_at : TIMESTAMP NULL
    expires_at : TIMESTAMP NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  FAILED_JOBS
' ─────────────────────────────────────────
entity failed_jobs {
    * id : BIGINT UNSIGNED PK AI
    --
    * uuid : VARCHAR(255) NOT NULL UNIQUE
    * connection : TEXT NOT NULL
    * queue : TEXT NOT NULL
    * payload : LONGTEXT NOT NULL
    * exception : LONGTEXT NOT NULL
    * failed_at : TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
}

' ─────────────────────────────────────────
'  JOB_SEEKERS
' ─────────────────────────────────────────
entity job_seekers {
    * id : BIGINT UNSIGNED PK AI
    --
    * user_id : BIGINT UNSIGNED FK → users.id (CASCADE)
    phone : VARCHAR(255) NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  COMPANIES
' ─────────────────────────────────────────
entity companies {
    * id : BIGINT UNSIGNED PK AI
    --
    * user_id : BIGINT UNSIGNED FK → users.id (CASCADE)
    phone : VARCHAR(255) NULL
    business_type : VARCHAR(255) NULL
    commercial_register_path : VARCHAR(255) NULL
    * verification_status : ENUM('pending','approved','rejected') NOT NULL DEFAULT 'pending'
    description : TEXT NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  JOBS
' ─────────────────────────────────────────
entity jobs {
    * id : BIGINT UNSIGNED PK AI
    --
    * user_id : BIGINT UNSIGNED FK → users.id (CASCADE)
    * title : VARCHAR(255) NOT NULL
    * job_type : VARCHAR(255) NOT NULL
    * location : VARCHAR(255) NOT NULL
    * salary : VARCHAR(255) NOT NULL
    * description : TEXT NOT NULL
    * requirements : TEXT NOT NULL
    * is_paid : TINYINT(1) NOT NULL DEFAULT 0
    payment_session_id : VARCHAR(255) NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  COMPANY_CANDIDATES
' ─────────────────────────────────────────
entity company_candidates {
    * id : BIGINT UNSIGNED PK AI
    --
    * company_user_id : BIGINT UNSIGNED FK → users.id (CASCADE)
    * candidate_user_id : BIGINT UNSIGNED FK → users.id (CASCADE)
    match_score : VARCHAR(255) NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
    --
    UNIQUE (company_user_id, candidate_user_id)
}

' ─────────────────────────────────────────
'  COMPLAINTS
' ─────────────────────────────────────────
entity complaints {
    * id : BIGINT UNSIGNED PK AI
    --
    * user_id : BIGINT UNSIGNED FK → users.id (CASCADE)
    * role : VARCHAR(255) NOT NULL
    * subject : VARCHAR(255) NOT NULL
    * message : TEXT NOT NULL
    * status : VARCHAR(255) NOT NULL DEFAULT 'pending'
    admin_response : TEXT NULL
    resolved_at : TIMESTAMP NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  USER_RESUMES
' ─────────────────────────────────────────
entity user_resumes {
    * id : BIGINT UNSIGNED PK AI
    --
    user_id : BIGINT UNSIGNED FK → users.id (SET NULL) NULL
    target_job : VARCHAR(255) NULL
    original_text : LONGTEXT NULL
    current_skills : JSON NULL
    missing_skills : JSON NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  USER_ROADMAPS
' ─────────────────────────────────────────
entity user_roadmaps {
    * id : BIGINT UNSIGNED PK AI
    --
    user_id : BIGINT UNSIGNED FK → users.id (CASCADE) NULL
    target_job : VARCHAR(255) NULL
    roadmap_text : LONGTEXT NULL
    missing_skills : JSON NULL
    suggested_courses : JSON NULL
    completed_skills : JSON NULL
    * is_active : TINYINT(1) NOT NULL DEFAULT 1
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ─────────────────────────────────────────
'  USER_QUIZZES
' ─────────────────────────────────────────
entity user_quizzes {
    * id : BIGINT UNSIGNED PK AI
    --
    user_id : BIGINT UNSIGNED FK → users.id (CASCADE) NULL
    tested_skills : JSON NULL
    quiz_data : JSON NULL
    score : INT NULL
    * created_at : TIMESTAMP NULL
    * updated_at : TIMESTAMP NULL
}

' ═══════════════════════════════════════════
'  RELATIONSHIPS
' ═══════════════════════════════════════════

' users (1) ──< job_seekers (N)
users ||--o{ job_seekers : "has one\n(job_seekers.user_id)"

' users (1) ──< companies (N)
users ||--o{ companies : "has one\n(companies.user_id)"

' users (1) ──< jobs (N) — company posts jobs
users ||--o{ jobs : "posts\n(jobs.user_id)"

' users (1) ──< company_candidates (N) — company saves candidates
users ||--o{ company_candidates : "company_candidates\n(company_candidates.company_user_id)"

' users (1) ──< company_candidates (N) — saved job seeker
users ||--o{ company_candidates : "saved as candidate\n(company_candidates.candidate_user_id)"

' users (1) ──< complaints (N)
users ||--o{ complaints : "submits\n(complaints.user_id)"

' users (1) ──< user_resumes (N)
users |o--o{ user_resumes : "owns\n(user_resumes.user_id) nullable"

' users (1) ──< user_roadmaps (N)
users |o--o{ user_roadmaps : "owns\n(user_roadmaps.user_id) nullable"

' users (1) ──< user_quizzes (N)
users |o--o{ user_quizzes : "takes\n(user_quizzes.user_id) nullable"

' personal_access_tokens — polymorphic morph to users
personal_access_tokens }o--|| users : "tokenable\n(polymorphic)"

@enduml
